methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:36: error: not found: value c
  while (c>0) {
         ^PictureMono2:38: error: not found: value c
    c=c-1
    ^