methods.picture.PictureMono2.scala.code
override def run() {
for (i<-1 to 3) {
  lines();
}
}
def square() {
    for (step<-1 to 3){
  	forward();forward()
  	makeV()
  	forward();forward()
}
}

def makeV() {
  brushDown();brushUp();
  forward();
  left();
  forward();
  brushDown();brushUp();
  backward();
  right();
  forward();
  brushDown();brushUp();
}

def lines() {
	var c=0
  for (i<-1 to 3) {
    square()
    for (a<- 1 to 7) {
      forward()
      c=c+1
    }
  }
}
  while (c>0) {
    backward();
    c=c-1
  }
  left();
	for (a<- 1 to 7) {
      forward()
  
}